--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,3 +79,6 @@ target_link_libraries(test_sbpl sbpl)
 
 add_executable(test_adjacency_list src/test/test_adjacency_list.cpp)
 target_link_libraries(test_adjacency_list sbpl)
+
+add_executable(test_xytheta src/test/xytheta.cpp)
+target_link_libraries(test_xytheta sbpl)
